# thermal-camera

./: .clangd  .gitignore  CMakeLists.txt  NOTICE  asdf.vcd  flake.nix  pulseview-setup
include/: fonts.h  scanner.h  st7789.h  st7789_framebuf.h  wifi_scan.h
lib/mlx90640/: CMakeLists.txt
lib/mlx90640/include/mlx90640/: MLX90640_API.h  MLX90640_I2C_Driver.h
lib/mlx90640/src/: MLX90640_API.c  MLX90640_I2C_Driver.c
pcb/: fp-info-cache  fp-lib-table  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch  sym-lib-table
pcb/Raspberry_Pi_Pico_W/Camera.pretty/: MLX90640.kicad_mod
pcb/Raspberry_Pi_Pico_W/MCU.pretty/: RPi_Pico_SC0918.kicad_mod
src/: fonts.c  main.c  st7789.c  st7789_framebuf.c  wifi_scan.c
